[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/event/Event.gd" type="Script" id=1]
[ext_resource path="res://lib/StyleBox2D.gd" type="Script" id=4]
[ext_resource path="res://game/bullet/icewave/ice_flake.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.00392157, 0.14902, 0.0705882, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
shadow_size = 20
anti_aliasing = false

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0.00176679, 0.17638 ), 0.0, 0.0, 0, 0, Vector2( 0.913428, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 5
emission_ring_radius = 500.0
emission_ring_inner_radius = 490.0
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 200.0
angular_velocity_random = 0.44
orbit_velocity = 0.1
orbit_velocity_random = 0.0
radial_accel = -100.0
tangential_accel = 80.0
scale_random = 1.0
scale_curve = SubResource( 5 )
color = Color( 0.0117647, 0.168627, 0.00784314, 1 )

[node name="Event" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 10, 10 )
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 1 )

[node name="Texture" type="Node2D" parent="."]

[node name="StyleBox2D" type="Node2D" parent="Texture"]
script = ExtResource( 4 )
size = Vector2( 200, 200 )
style_box = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="Texture"]
amount = 80
lifetime = 2.8
speed_scale = 0.5
visibility_rect = Rect2( -498.165, -493.006, 990.21, 990.825 )
process_material = SubResource( 6 )
texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
